[workspace.package]
version = "0.3.0-alpha.22"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "crates/api_client",
  "crates/database",
  "crates/database_schema",
  "crates/federate",
  "crates/frontend",
  "crates/frontend_components",
  "crates/hydrate",
  "crates/backend",
  "crates/markdown",
]

# This profile significantly speeds up build time. If debug info is needed you can comment the line
# out temporarily, but make sure to leave this in the main branch.
[profile.dev]
debug = 0

[profile.release]
lto = "thin"
# Breaks release builds in CI.
# https://github.com/leptos-rs/cargo-leptos/issues/441
# strip = true

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = "thin"
panic = "abort"

[workspace.lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
todo = "deny"
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

[workspace.dependencies]
ibis_database = { path = "crates/database" }
ibis_federate = { path = "crates/federate" }
ibis_frontend = { path = "crates/frontend" }
ibis_api_client = { path = "crates/api_client" }
ibis_markdown = { path = "crates/markdown" }
leptos = "0.8.2"
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
leptos-use = { version = "0.16.0-beta2", features = [
  "use_textarea_autosize",
  "use_cookie",
  "use_preferred_dark",
], default-features = false }
codee = { version = "0.3.0", features = ["json_serde"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
sha2 = "0.10.9"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
activitypub_federation = { git = "https://github.com/LemmyNet/activitypub-federation-rust.git", branch = "upgrade-deps6", features = [
  "axum",
] }
url = { version = "2.5.4", features = ["serde"] }
diffy = "0.4.2"
axum = "0.8.4"
axum-macros = "0.5.0"
anyhow = "1.0.98"
log = "0.4"
bcrypt = "0.17.0"
doku = { version = "0.21.1", features = ["url-2"] }
futures = "0.3.31"
tokio = { version = "1.45.0", default-features = false }
http = "1.3.1"
regex = "1.11.1"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = [
  "json",
  "cookies",
  "rustls-tls",
], default-features = false }
phosphor-leptos = { version = "0.8.0", features = [
  "system",
  "communication",
  "office",
  "arrows",
], default-features = false }
diesel = { version = "2.2.10", default-features = false, features = [
  "postgres",
  "chrono",
  "uuid",
  "r2d2",
] }
itertools = "0.14.0"

[[workspace.metadata.leptos]]
name = "ibis"
output-name = "ibis"
assets-dir = "assets"
bin-package = "ibis"
lib-package = "ibis_hydrate"
lib-profile-release = "wasm-release"
style-file = "assets/ibis.css"
tailwind-input-file = "assets/ibis.css"
tailwind-config-file = "tailwind.config.js"

# Speedup RSA key generation
# https://github.com/RustCrypto/RSA/blob/master/README.md#example
[profile.dev.package.num-bigint-dig]
opt-level = 3
