[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5.4", features = ["csr"] }
reqwest = { version = "0.11.22", features = ["json"] }
console_log = "1"
console_error_panic_hook = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
url = {version = "2.4.1", features = ["serde"] }
