[package]
name = "ibis_database"
version = "0.2.2"
edition = "2021"

[features]
default = ["ssr"]
ssr = []

[dependencies]
diesel = { version = "2.2.6", default-features = false, features = [
  "postgres",
  "chrono",
  "uuid",
  "r2d2",
] }
diesel-derive-newtype = "2.1.2"
diesel_migrations = "2.2.0"
smart-default = "0.7.1"
hex = "0.4.3"
bcrypt.workspace = true
config = { version = "0.15.6", features = ["toml"] }
clokwerk = "0.4.0"
doku.workspace = true
anyhow.workspace =true
serde.workspace = true
chrono.workspace = true
sha2.workspace = true
uuid.workspace = true
activitypub_federation.workspace = true
url.workspace = true
diffy.workspace = true
axum.workspace = true
log.workspace = true