[package]
name = "ibis_database"
version.workspace = true
edition.workspace = true

[features]
default = []
ssr = []

[lints]
workspace = true

[dependencies]
serde.workspace = true
url.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
smart-default = "0.7.1"

# backend-only deps
[target.'cfg(not(target_family = "wasm"))'.dependencies]
ibis_markdown.workspace = true
ibis_database_schema = { path = "../database_schema" }
diesel.workspace = true
diesel-derive-newtype = "2.1.2"
diesel_migrations = "2.2.0"
hex = "0.4.3"
bcrypt.workspace = true
config = { version = "0.15.11", features = ["toml"] }
clokwerk = "0.4.0"
sha2.workspace = true
diffy.workspace = true
axum.workspace = true
log.workspace = true
activitypub_federation.workspace = true
reqwest.workspace = true
doku.workspace = true
lettre = { version = "0.11.16", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1-rustls-tls",
  "pool",
] }
html2text = "0.15.0"
