[package]
name = "ibis_federate"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ibis_database = { workspace = true, features = ["ssr"] }
ibis_markdown.workspace = true
regex.workspace = true
tokio.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
activitypub_federation.workspace = true
url.workspace = true
axum.workspace = true
axum-macros.workspace = true
chrono.workspace = true
diffy.workspace = true
anyhow.workspace = true
enum_delegate = "0.2.0"
async-trait = "0.1.87"
rand = "0.8.5"
html2md = "0.2.15"
