[package]
name = "ibis_federate"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ibis_database = { workspace = true, features = ["ssr"] }
ibis_markdown.workspace = true
regex.workspace = true
tokio.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
activitypub_federation.workspace = true
url.workspace = true
axum.workspace = true
axum-macros.workspace = true
chrono.workspace = true
diffy.workspace = true
anyhow.workspace = true
serde_json.workspace = true
itertools.workspace = true
enum_delegate = "0.2.0"
async-trait = "0.1.88"
rand = "0.9.1"
html2md = "0.2.15"
either = { version = "1.15.0", features = ["serde"] }
serde_with = "3.12.0"
