[package]
name = "ibis_frontend"
version.workspace = true
edition.workspace = true

[features]
ssr = [
  "ibis_markdown/ssr",
  "leptos-use/ssr",
  "leptos-use/axum",
  "leptos/ssr",
  "ibis_api_client/ssr",
]
hydrate = ["ibis_markdown/hydrate", "leptos/hydrate", "ibis_api_client/hydrate"]

[lints]
workspace = true

[dependencies]
ibis_database.workspace = true
ibis_api_client.workspace = true
ibis_markdown.workspace = true
leptos.workspace = true
log.workspace = true
serde.workspace = true
chrono.workspace = true
url.workspace = true
phosphor-leptos.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "js"] }
leptos_meta = "0.7.4"
leptos_router = "0.7.4"
leptos-use = { version = "0.15.6", features = [
  "use_textarea_autosize",
  "use_cookie",
  "use_preferred_dark",
], default-features = false }
codee = { version = "0.2.0", features = ["json_serde"] }
timeago = "0.4.2"
