[package]
name = "ibis_frontend"
version.workspace = true
edition.workspace = true

[features]
ssr = [
  "ibis_markdown/ssr",
  "leptos-use/ssr",
  "leptos-use/axum",
  "leptos/ssr",
  "ibis_api_client/ssr",
  "ibis_frontend_components/ssr",
  "leptos-fluent/ssr",
  "leptos-fluent/axum",
]
hydrate = [
  "ibis_markdown/hydrate",
  "leptos/hydrate",
  "ibis_api_client/hydrate",
  "ibis_frontend_components/hydrate",
  "leptos-fluent/hydrate",
]

[lints]
workspace = true

[dependencies]
ibis_database.workspace = true
ibis_api_client.workspace = true
ibis_markdown.workspace = true
ibis_frontend_components = { path = "../frontend_components" }
leptos.workspace = true
log.workspace = true
serde.workspace = true
chrono.workspace = true
url.workspace = true
phosphor-leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true
leptos-fluent.workspace = true
codee.workspace = true
itertools.workspace = true
