[package]
name = "ibis_frontend_components"
version.workspace = true
edition.workspace = true

[features]
ssr = [
  "ibis_markdown/ssr",
  "leptos-use/ssr",
  "leptos-use/axum",
  "leptos/ssr",
  "ibis_api_client/ssr",
]
hydrate = [
  "ibis_markdown/hydrate",
  "leptos/hydrate",
  "ibis_api_client/hydrate",
  "uuid/js",
]

[lints]
workspace = true

[dependencies]
ibis_database.workspace = true
ibis_api_client.workspace = true
ibis_markdown.workspace = true
leptos.workspace = true
serde.workspace = true
chrono.workspace = true
url.workspace = true
phosphor-leptos.workspace = true
serde_json.workspace = true
uuid.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true
codee.workspace = true
timeago = "0.4.2"
