[package]
name = "ibis_hydrate"
version = "0.2.2"
edition = "2021"

[dependencies]
ibis_frontend = { workspace = true, features = ["hydrate"] }
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
leptos = { workspace = true, features = ["hydrate"] }
log.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
